completed school analysis challenge

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -5029,35 +5029,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "id": "3c38f231",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Bailey High School       (615, 645]\n",
-       "Cabrera High School        (0, 585]\n",
-       "Figueroa High School     (615, 645]\n",
-       "Ford High School         (615, 645]\n",
-       "Griffin High School      (615, 645]\n",
-       "Hernandez High School    (645, 675]\n",
-       "Holden High School         (0, 585]\n",
-       "Huang High School        (645, 675]\n",
-       "Johnson High School      (645, 675]\n",
-       "Pena High School         (585, 615]\n",
-       "Rodriguez High School    (615, 645]\n",
-       "Shelton High School      (585, 615]\n",
-       "Thomas High School       (615, 645]\n",
-       "Wilson High School         (0, 585]\n",
-       "Wright High School         (0, 585]\n",
-       "dtype: category\n",
-       "Categories (4, interval[int64, right]): [(0, 585] < (585, 615] < (615, 645] < (645, 675]]"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/bt/dyx0f07s4tvgnphkcwj4ckfh0000gn/T/ipykernel_23666/2620303824.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Cut the per_school_capita into the spending ranges.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mspending_bins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m585\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m615\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m645\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m675\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcut\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mper_school_capita\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspending_bins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
